<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_background_blur" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_108"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/etEmail"
                app:layout_constraintDimensionRatio="4:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginEnd="@dimen/space_24"
                android:layout_marginBottom="@dimen/space_20"
                android:background="@drawable/bg_text_field"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingStart="@dimen/space_12"
                android:paddingTop="@dimen/space_16"
                android:paddingEnd="@dimen/space_12"
                android:paddingBottom="@dimen/space_16"
                android:textColor="@color/white"
                android:textColorHint="@color/white_20"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginEnd="@dimen/space_24"
                android:background="@drawable/bg_text_field"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="@dimen/space_12"
                android:paddingTop="@dimen/space_16"
                android:paddingEnd="@dimen/space_12"
                android:paddingBottom="@dimen/space_16"
                android:textColor="@color/white"
                android:textColorHint="@color/white_20"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_12"
                android:paddingTop="@dimen/space_16"
                android:paddingEnd="@dimen/space_12"
                android:paddingBottom="@dimen/space_16"
                android:text="@string/btnForgotPassword"
                android:textColor="@color/white_50"
                app:layout_constraintBottom_toBottomOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toTopOf="@id/etPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginTop="@dimen/space_20"
                android:layout_marginEnd="@dimen/space_24"
                android:paddingStart="@dimen/space_12"
                android:paddingTop="@dimen/space_16"
                android:paddingEnd="@dimen/space_12"
                android:paddingBottom="@dimen/space_16"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="@color/white_20"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/space_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_20"
                android:layout_marginEnd="@dimen/space_56"
                android:layout_marginBottom="@dimen/space_16"
                android:indeterminateTint="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnLogin"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                app:layout_constraintTop_toTopOf="@id/btnLogin"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>